--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
     <section id = "services">
 
       <h1> Services </h1>
-        <div class = card-container" id="cardContainer"> </div> 
+        <div id="cardContainer"> </div> 
     </section>
-
+    
     <section id = "News">
 
       <h1> News </h1>
